[package]
name = "sim_modem"
version = "0.1.0"
edition = "2021"


[features]
default = ["std"]
std = []


[dependencies]
at-commands = "0.5.4"
embedded-io = "0.6.1"
log = { version = "0.4", default-features = false }

[dev-dependencies]
serialport = "4.3.0"
colog = "1.3"

[[example]]
name = "pc_serial"
required-features = ["std"]
